# Kairos-Firmware-Pi

./: .gitignore  CMakeLists.txt  kairos.conf
docs/superpowers/plans/: 2026-04-16-kairos-pi-core.md
docs/superpowers/specs/: 2026-04-16-kairos-pi-core-design.md
src/: command_queue.hpp  config.cpp  config.hpp  cycle_queue.hpp  display_thread.cpp  display_thread.hpp  imr_window.cpp  imr_window.hpp  logger.cpp  logger.hpp  lv_conf.h  main.cpp  rolling_window.cpp  rolling_window.hpp  serial_thread.cpp  serial_thread.hpp  shared_state.hpp  stats_thread.cpp  stats_thread.hpp
tests/: CMakeLists.txt  test_config.cpp  test_cycle_queue.cpp  test_imr_window.cpp  test_logger.cpp  test_rolling_window.cpp
